--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,12 @@ jobs:
       - name: subfinder
         run: ./subfinder -dL input/targets.txt -all -o domain.txt
 
-      - name: naabu httpx
-        run: ./naabu -list domain.txt -p - -silent | ./httpx -mc 200 -o http_probe.txt
+      - name: naabu
+        run: ./naabu -list domain.txt -p - -o ports.txt
+
+      - name: httpx
+        run: ./httpx -l ports.txt -mc 200 -o http_probe.txt
         
       - name: Execute based on type
         run: |
-          cat http_probe.txt
           ./nuclei -header 'User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64)' -list http_probe.txt -stats -at pitchfork -o vuln.txt | tee output/vuln.txt
