--- a/.github/workflows/http_probe.yml
+++ b/.github/workflows/http_probe.yml
@@ -21,10 +21,10 @@ jobs:
         run: ./naabu -rate 10000 -list input/targets.txt -p - -o ports.txt
 
       - name: httpx
-        run: ./httpx -l ports.txt -csv -o http_probe.csv
+        run: ./httpx -l ports.txt -json -o http_probe.json
           
       - name: Save Artifact
         uses: actions/upload-artifact@v2
         with:
           name: http_probe
-          path: http_probe.csv
+          path: http_probe.json
