--- a/.github/workflows/icp.yml
+++ b/.github/workflows/icp.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install requirements
         run: |
-          sudo python -m pip install requirements.txt
+          sudo python -m pip install -r requirements.txt
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: icp run
