--- a/.github/workflows/icp.yml
+++ b/.github/workflows/icp.yml
@@ -18,9 +18,11 @@ jobs:
       - name: Install requirements
         run: |
           sudo python -m pip install -r icp/requirements.txt
-      - name: icp run
+      - name: savexlsx
         run: 
           curl -o https://raw.githubusercontent.com/aliyungithub1234/test2/main/icp/wordpress.xlsx
+      - name: icp run
+        run: 
           python icp/icp_query.py
       - name: Save Artifact
         uses: actions/upload-artifact@v2
