--- a/.github/workflows/portscan.yml
+++ b/.github/workflows/portscan.yml
@@ -18,7 +18,7 @@ jobs:
           chmod 777 httpx
 
       - name: naabu
-        run: ./naabu -c 50 -rate 5000 -host 140.210.28.128 -p 1-65535 -o ports.txt
+        run: ./naabu -c 50 -rate 5000 -l input/targets.txt -p 1-65535 -o ports.txt
 
       - name: httpx
         run: ./httpx -l ports.txt -o http_probe.txt
